// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render text for viewing multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h2
      className="page-header__title"
    >
      Viewing 
      <span>
        3 expenses
      </span>
       totalling 
      <span>
        $1,141.95
      </span>
      <div
        className="page-header__actions"
      >
        <Link
          className="button"
          replace={false}
          to="/create"
        >
          Add Expense
        </Link>
      </div>
    </h2>
  </div>
</div>
`;

exports[`should render text for viewing single expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h2
      className="page-header__title"
    >
      Viewing 
      <span>
        1 expense
      </span>
       totalling 
      <span>
        $1.95
      </span>
      <div
        className="page-header__actions"
      >
        <Link
          className="button"
          replace={false}
          to="/create"
        >
          Add Expense
        </Link>
      </div>
    </h2>
  </div>
</div>
`;
